--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/AnewB/WebRoot/WEB-INF/classes"/>
-        <property name="context-root" value="ANewB"/>
+        <property name="context-root" value="/AnewB"/>
     </wb-module>
 </project-modules>
